# Focus-Companion

./: .gitignore  README.md  index.html  opencode.json  package-lock.json  package.json  vite.config.ts
public/models/: README.md
scripts/: e2e-smoke.mjs  fetch-mediapipe-model.mjs  prepare-assets.mjs  setup.sh  sign-local-app.sh  tauri-smoke.sh  visual-smoke.mjs
src/: App.test.tsx  App.tsx  i18n.ts  observedActivity.test.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppLayout.tsx  ChartPanel.tsx  LiveStatus.test.tsx  LiveStatus.tsx  SessionPanels.tsx  SummaryCharts.test.ts  SummaryCharts.tsx  chartRuntime.ts  charts.test.ts  charts.ts
src/core/: activitywatch.desktop.test.ts  activitywatch.test.ts  activitywatch.ts  camera.ts  cameraCalibration.test.ts  cameraCalibration.ts  desktopBridge.test.ts  desktopBridge.ts  focus.test.ts  focus.ts  focusSession.test.ts  focusSession.ts  inputActivity.test.tsx  inputActivity.ts  nudges.test.ts  nudges.ts  observedActivity.ts  openTimer.test.ts  openTimer.ts  report.test.ts  report.ts  sampleData.ts  settingsBackup.test.ts  settingsBackup.ts  simulation.test.ts  simulation.ts  storage.test.ts  storage.ts  time.test.tsx  time.ts  userErrors.test.ts  userErrors.ts
src/hooks/: useActivityWatchSync.ts  useFocusSessionController.ts
