[package]
name = "focus-companion"
version = "0.1.0"
description = "Local-first focus companion"
authors = ["Focus Companion Contributors"]
edition = "2021"

[lib]
name = "focus_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
